--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -27,3 +27,16 @@
   }
 }
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap');
+.loading {
+  font-weight: bold;
+  display:inline-block;
+  font-size: 30px;
+  clip-path: inset(0 1ch 0 0);
+  animation: l 1s steps(4) infinite;
+}
+
+@keyframes l {
+  to {
+    clip-path: inset(0 -1ch 0 0)
+  }
+}
